<resources>
    <string name="app_name">c1ph3rBank</string>
    <string name="userNameFieldHint">UserName</string>
    <string name="pinFieldHint">4-digit Pin</string>
    <string name="loginBtnText">Login</string>
    <string name="loginLayoutHeadingText">Login:</string>
    <string name="greetingsAtTheStart">Welcome to\nCipher Bank</string>
    <string name="greetingToNewUser">New user? \nPlease Click here.</string>
    <string name="greetingsToTheUser">Welcome \n</string>
    <string name="title_activity_user_operations">UserOperations</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard_menu">Dashboard</string>
    <string name="settings_menu">Settings</string>
    <string name="greetTheUser">Welcome \n</string>
    <string name="ATM_Card_BankName">C1PH3R</string>
    <string name="ATM_CardType">Debit Card</string>
    <string name="ATM_UserName">TextView</string>
    <string name="ATM_CardNo">TextView</string>
    <string name="ATM_ExpiryDate">TextView</string>
    <string name="options">Options:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_money_Btn_text">Send Money</string>
    <string name="add_money_btn_text">Add Money</string>
    <string name="virtual_card_text">Virtual Card:</string>
    <string name="balance_btn_text">Balance</string>
    <string name="show_transactions_text">Show Transactions</string>
    <string name="greetToTheNewUserText">Enter Your Details\nBelow:</string>
    <string name="ReEnterPinText">Confirm Your Pin</string>
    <string name="select_account_type_field">Select Account Type</string>
    <string name="savingsBtn">Savings</string>
    <string name="currentBtn">Current</string>
    <string name="accountNumberText">AccountNumber</string>
    <string name="submitBtn">Submit</string>
    <string name="back_btn_confirm_pay">Back</string>
    <string name="send_money_text">Send Money:</string>
    <string name="sender_id">Enter UserName</string>
    <string name="enter_amount_withdraw">Enter Amount</string>
    <string name="confirm_payment">Confirm</string>
    <string name="cancel_withdraw">Cancel</string>
    <string name="your_account_balance_is">Your Account Balance is:</string>
    <string name="back_on_balance">Back</string>
    <string name="to_add_money">To Add Money:</string>
    <string name="cancelDeposit">Cancel</string>
    <string name="confirmDeposit">Confirm</string>
    <string name="enter_amount_deposit">Enter Amount</string>
    <string name="back_on_transaction">Back</string>
    <string name="amount_debited_nsuccessfully">Amount Debited \nSuccessFully.</string>
    <string name="amount_deposited_nsuccessfully">Amount Deposited \nSuccessFully.</string>
    <string name="back">Back</string>

    //ERROR MESSAGES
    <string name="IfUserNameIsEmpty">Enter a Valid UserName.</string>
    <string name="IfPinIsEmpty">Enter a valid Pin.</string>
    <string name="IfReEnterPinIsEmpty">Pin does not match.</string>
    <string name="IfAccountNoIsEmpty">Enter a Valid AccountNumber.</string>
    <string name="IfAccountTypeIsEmpty">Choose your Account Type.</string>
    <string name="IfRegistrationFailed">Failed To Register.</string>
    <string name="IfRegistrationSuccess">Registered SuccessFully</string>
    <string name="userNameAlreadyExists">UserName Already Exists</string>
    <string name="AccountNumberAlreadyExists">Account Number Already Exist</string>
    <string name="Confirm_Deposit_To_the_user">Do you want to Deposit the Amount ?</string>
    <string name="Alert">Alert !</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="ErrorAmountInvalid">Invalid Amount</string>
    <string name="ErrorInvalidPin">Invalid Pin</string>
    <string name="settings_headding">Settings</string>
    <string name="change_pin_text">Change Pin</string>
    <string name="logout_text">Logout</string>
    <string name="debit_nav_string">Debit</string>
    <string name="credit_nav_string">Credit</string>
    <string name="heading_debit">Transactions\nDebits:</string>
    <string name="transactions_credits_text">Transactions\nCredits:</string>
    <string name="userNameAndPasswordError">UserName or Password invalid.</string>
    <string name="Do_you_want_to_logout">Do you Want to Logout?</string>
    <string name="Quit_String">Quit</string>
    <string name="No_String">No</string>
    <string name="Yes_String">Yes</string>
    <string name="Logout_text">Logout</string>
    <string name="IndexValue_Strings">IndexValue</string>
    <string name="value_String">value</string>
    <string name="DoYouWantToWithraw_String">Do you want to Withdraw ?</string>
    <string name="AmoutDebited_String">Amount Has been taken from your account.\nBalance:</string>

</resources>