<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:id="@+id/DepositLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/user_login_layout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <TextView
            android:id="@+id/DepositTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:fontFamily="@font/fig_tree_semi_bold"
            android:text="@string/to_add_money"
            android:textColor="@color/Indigo"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AmountFieldLayoutDeposit"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/Indigo"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:startIconTint="@color/Indigo"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/Indigo"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/Blue"
            app:layout_constraintBottom_toTopOf="@+id/DepositButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DepositTitle"
            app:layout_constraintVertical_bias="0.083"
            app:startIconDrawable="@drawable/ic_baseline_money_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AmountFieldDeposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata_regular"
                android:hint="@string/enter_amount_deposit"
                android:inputType="number"
                android:maxLines="1"
                android:onClick="onClickAmountFieldDeposit"
                android:textColor="@color/Indigo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/DepositButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="OnClickVerifyDepositPay"
            android:padding="10dp"
            android:text="@string/confirmDeposit"
            android:textColor="@color/white"
            app:backgroundTint="@color/Blue"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CancelDepositButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="OnClickCancelVerifyDepositPay"
            android:padding="10dp"
            android:text="@string/cancelDeposit"
            android:textColor="@color/white"
            app:backgroundTint="@color/Blue"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>